Attempt at fixing tablet work section sizing issues on low width's in landscape mode, fix of experience section on mobile

--- a/css/experience.css
+++ b/css/experience.css
@@ -43,7 +43,7 @@
     grid-area: display;
     padding: 32px;
     box-shadow: var(--drop-shadow-md);
-    min-width: 420px;
+    /*min-width: 420px;*/
 }
 
 .experience-display--background-gray-default {
