--- a/css/site.css
+++ b/css/site.css
@@ -64,6 +64,6 @@
     }
 
     .site > .hero {
-        padding: 32px 16px 120px;;
+        padding: 32px 16px 120px;
     }
 }
